--- a/index.html
+++ b/index.html
@@ -5,8 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header class="header" id="header">
+        <div class="container" id="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="logo" id="logo">
+                        <img src="assets/img/logo/ohmyfood.png" class="img-logo" alt="Logo du site OHMYFOOD">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="ind" id="ind">
+            <div class="container">
+                <div class="col-lg-12 col-md-12">
+                    <p class="txt" id="txt">
+                        <i class="fa-solid fa-location-dot"></i> Paris, Belleville
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container" id="container">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="content" id="content">
+                    <div class="logo-footer" id="logo-footer">
+                        <h6>ohmyfood</h6>
+                    </div>
+                    <div class="links">
+                        <a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a>
+                        <a href="#">Devenir partenaire</a>
+                        <a href="#">Mentions légales</a>
+                        <a href="#">Contact</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     
+    <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
 </html>
