--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -24,12 +24,181 @@
         </div>
     </header>
     <main class="main">
-        <section class="ind" id="ind">
+        <section class="int" id="int">
             <div class="container">
-                <div class="col-lg-12 col-md-12">
-                    <p class="txt" id="txt">
-                        <i class="fa-solid fa-location-dot"></i> Paris, Belleville
-                    </p>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <p class="txt" id="txt">
+                            <i class="fa-solid fa-location-dot"></i> Paris, Belleville
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="reserv">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Réservez le menu qui vous convient</h1>
+                    </div>
+                    <div class="col-md-12">
+                        <p>
+                            Découvrez des restaurants d'exception sélectionnés par nos soins. 
+                        </p>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="btn" id="btn">
+                            <button>
+                                Explorer nos restaurants
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="fonct">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Fonctionnement</h2>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="btn-1 shad" id="btn-1">
+                            <div class="number">
+                                <span class="numb">1</span>
+                            </div>
+                            <button class="restaurant" id="restaurant">
+                                <div class="icon" id="icon">
+                                    <span class="phone" id="phone">
+                                        <i class="fa-solid fa-mobile-screen"></i>
+                                    </span>
+                                </div>
+                                <div class="text" id="text">
+                                    <span class="p-t">Choisissez un restaurant</span>
+                                </div>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="btn-2 shad" id="btn-2">
+                            <div class="number">
+                                <span class="numb">2</span>
+                            </div>
+                            <button class="menu" id="menu">
+                                <div class="icon" id="icon">
+                                    <span class="list" id="list">
+                                        <i class="fa-solid fa-list"></i>
+                                    </span>
+                                </div>
+                                <div class="text" id="text">
+                                    <span class="p-t">Composez votre menu</span>
+                                </div>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="btn-3 shad" id="btn-3">
+                            <div class="number">
+                                <span class="numb">3</span>
+                            </div>
+                            <button class="degust" id="degust">
+                                <div class="icon" id="icon">
+                                    <span class="store" id="store">
+                                        <i class="fa-solid fa-store"></i>
+                                    </span>
+                                </div>
+                                <div class="text" id="text">
+                                    <span class="p-t">Dégustez au restaurant</span>
+                                </div>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="restau">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Restaurants</h3>
+                    </div>
+                    <div class="cards-list" id="cards-list">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="one">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image restaurant 1">
+                                    <div class="new" id="new">
+                                        <p>Nouveau</p>
+                                    </div>
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>La palette du goût</h5>
+                                            <p>Ménilmontant</p>
+                                        </div>
+                                        <div class="favoris" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="two">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image restaurant 2">
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>La note enchantée</h5>
+                                            <p>Charonne</p>
+                                        </div>
+                                        <div class="favoris" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="three">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image restaurant 3">
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>À la française</h5>
+                                            <p>Cité rouge</p>
+                                        </div>
+                                        <div class="favoris" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="four">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image restaurant 4">
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>Le délice des sens</h5>
+                                            <p>Folie-Méricourt</p>
+                                        </div>
+                                        <div class="favoris" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -44,7 +213,7 @@
                     </div>
                     <div class="links">
                         <a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a>
-                        <a href="#">Devenir partenaire</a>
+                        <a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
                         <a href="#">Mentions légales</a>
                         <a href="#">Contact</a>
                     </div>
