Ajout du contenu à la française + autres pages du menu + bannière de presentation

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </p>
                     </div>
                     <div class="col-md-12">
-                        <div class="btn" id="btn">
+                        <div class="btn-princ" id="btn">
                             <button>
                                 Explorer nos restaurants
                             </button>
@@ -134,7 +134,7 @@
                                         <h5>La palette du goût</h5>
                                         <p>Ménilmontant</p>
                                     </div>
-                                    <div class="favoris" id="favoris">
+                                    <div class="favoris favoris-ind" id="favoris">
                                         <span class="ic" id="ic">
                                             <i class="fa-regular fa-heart"></i>
                                         </span>
@@ -145,12 +145,15 @@
                         <div class="two">
                             <div class="card shad" id="card">
                                 <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image restaurant 2">
+                                <div class="new" id="new">
+                                    <p>Nouveau</p>
+                                </div>
                                 <div class="card-body" id="cardbody">
                                     <div class="txt" id="txt">
                                         <h5>La note enchantée</h5>
                                         <p>Charonne</p>
                                     </div>
-                                    <div class="favoris" id="favoris">
+                                    <div class="favoris favoris-ind" id="favoris">
                                         <span class="ic" id="ic">
                                             <i class="fa-regular fa-heart"></i>
                                         </span>
@@ -161,12 +164,15 @@
                         <div class="three">
                             <div class="card shad" id="card">
                                 <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image restaurant 3">
+                                <div class="new" id="new">
+                                    <p>Nouveau</p>
+                                </div>
                                 <div class="card-body" id="cardbody">
                                     <div class="txt" id="txt">
                                         <h5>À la française</h5>
                                         <p>Cité rouge</p>
                                     </div>
-                                    <div class="favoris" id="favoris">
+                                    <div class="favoris favoris-ind" id="favoris">
                                         <span class="ic" id="ic">
                                             <i class="fa-regular fa-heart"></i>
                                         </span>
@@ -177,12 +183,15 @@
                         <div class="four">
                             <div class="card shad" id="card">
                                 <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image restaurant 4">
+                                <div class="new" id="new">
+                                    <p>Nouveau</p>
+                                </div>
                                 <div class="card-body" id="cardbody">
                                     <div class="txt" id="txt">
                                         <h5>Le délice des sens</h5>
                                         <p>Folie-Méricourt</p>
                                     </div>
-                                    <div class="favoris" id="favoris">
+                                    <div class="favoris favoris-ind" id="favoris">
                                         <span class="ic" id="ic">
                                             <i class="fa-regular fa-heart"></i>
                                         </span>
