Contenu de la page note echantée + responsive

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -33,7 +33,7 @@
         <section class="present franc">
         </section>
         <section class="menu-restau">
-            <div class="colg-lg-12 col-md-12 col-sm-12">
+            <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="title" id="title">
                     <h1 class="h-title">À la française</h1>
                     <div class="favoris" id="favoris">
@@ -54,7 +54,7 @@
                                     <p>Aux zestes d'orange</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">25 €</span>
+                                    <span class="price">25€</span>
                                 </div>
                             </button>
                             <button class="shad btn-menu">
@@ -65,7 +65,7 @@
                                     <p>Carotte, panais, topinambour</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">35 €</span>
+                                    <span class="price">35€</span>
                                 </div>
                             </button>
                             <button class="shad btn-menu">
@@ -76,7 +76,7 @@
                                     <p>Revisitée</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">20 €</span>
+                                    <span class="price">20€</span>
                                     <span class="valid">
                                         <i class="fa-solid fa-circle-check"></i>
                                     </span>
@@ -95,7 +95,7 @@
                                     <p>Accompagnées d'une purée de panais</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">40 €</span>
+                                    <span class="price">40€</span>
                                 </div>
                             </button>
                             <button class="shad btn-menu">
@@ -106,7 +106,7 @@
                                     <p>Et parmentier de pommes de terre</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">35 €</span>
+                                    <span class="price">35€</span>
                                 </div>
                             </button>
                             <button class="shad btn-menu">
@@ -117,7 +117,7 @@
                                     <p>Sur son  lit de gnocchis aux légumes</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">44 €</span>
+                                    <span class="price">44€</span>
                                 </div>
                             </button>
                         </div>
@@ -133,7 +133,7 @@
                                     <p>Et purée de noisettes</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">18 €</span>
+                                    <span class="price">18€</span>
                                 </div>
                             </button>
                             <button class="shad btn-menu">
@@ -144,7 +144,7 @@
                                     <p>Revisité</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">22 €</span>
+                                    <span class="price">22€</span>
                                 </div>
                             </button>
                             <button class="shad btn-menu">
@@ -155,7 +155,7 @@
                                     <p>Myrtille et pâte d'amande</p>
                                 </div>
                                 <div class="valid-btn">
-                                    <span class="price">23 €</span>
+                                    <span class="price">23€</span>
                                 </div>
                             </button>
                         </div>
