--- a/note-enchantee.html
+++ b/note-enchantee.html
@@ -31,7 +31,157 @@
     <main class="main">
         <section class="present note">
         </section>
-        
+        <section class="menu-restau">
+            <div class="colg-lg-12 col-md-12 col-sm-12">
+                <div class="title" id="title">
+                    <h1 class="h-title">La note enchantée</h1>
+                    <div class="favoris" id="favoris">
+                        <span class="heart" id="heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="entrees">
+                    <h2 class="m-title">Entrées</h2>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Ravioles de foie gras</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Accompagnées de leur crème à la truffe</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">25€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Caviar osciètre</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Homard et espuma de...</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Marinés aux zestes d'orange</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">20€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Foie gras de canard cuit entier</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="plats">
+                    <h3 class="m-title">Plats</h3>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Noix de coquilles Saint-Jacques</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">40€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Langoustine poêlée</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et purée de patate douce</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Mijoté de queue de boeuf</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">44€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="desserts">
+                    <h4 class="m-title">Désserts</h4>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Macaron noisette et chocolat</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">18€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Baba au rhum revisité</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Avec son coulis de citron</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">22€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Tarte au citron meringuée</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Déstructurée</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">23€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <button>
+                        Commander
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
