Palette du goût + responsive

--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -32,7 +32,146 @@
     <main class="main">
         <section class="present gout">
         </section>
-        
+        <section class="menu-restau">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="title" id="title">
+                    <h1 class="h-title">La palette du goût</h1>
+                    <div class="favoris" id="favoris">
+                        <span class="heart" id="heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="entrees">
+                    <h2 class="m-title">Entrées</h2>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Fricassée d'escargots</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Au piment d'Espelette</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">25€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Foie gras de canard mi-cuit</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Oeuf au plat</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Assaisonné à la truffe sur lit de...</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">20€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="plats">
+                    <h3 class="m-title">Plats</h3>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Filet de boeuf aux herbes</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Accompagné de sa rimbambelle de légumes</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">40€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Parmentier de queue de boeuf</h6>
+                            </div>
+                            <div class="txt">
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Filet de trubot</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Aux agrumes</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">44€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="desserts">
+                    <h4 class="m-title">Désserts</h4>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Paris-Brest</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Revisité</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">18€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Macaron au chocolat d'exception</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et glace à la ville de Madagascar</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">22€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Mousse au chocolat</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">23€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <button>
+                        Commander
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
