--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La délice des sens - Ohmyfood</title>
+    <title>Le délice des sens - Ohmyfood</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,27 @@
     <main class="main">
         <section class="present delice">
         </section>
-        
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <button>
+                        Commander
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="menu-restau">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="title" id="title">
+                    <h1 class="h-title">Le délice des sens</h1>
+                    <div class="favoris" id="favoris">
+                        <span class="heart" id="heart">
+                            <i class="fa-regular fa-heart"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
