--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -32,15 +32,6 @@
     <main class="main">
         <section class="present delice">
         </section>
-        <section class="commandes">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="btn-princ" id="btn">
-                    <button>
-                        Commander
-                    </button>
-                </div>
-            </div>
-        </section>
         <section class="menu-restau">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="title" id="title">
@@ -50,6 +41,134 @@
                             <i class="fa-regular fa-heart"></i>
                         </span>
                     </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="entrees">
+                    <h2 class="m-title">Entrées</h2>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Tartare de thon</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Assaisonné au yuzu</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">25€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Bouchée de homard croustillant</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et sa farandole de petits légumes</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Velouté de cèpes</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Aux truffes</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">20€</span>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="plats">
+                    <h3 class="m-title">Plats</h3>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Poulet rôti aux herbes de Prove...</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et sa crème de truffe</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">40€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Langouste rôtie</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et ses légumes de saison</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">35€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Côte de boeuf Angus</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Et sa purée de panais</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">44€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="desserts">
+                    <h4 class="m-title">Désserts</h4>
+                    <div class="card-rest">
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Farandole de desserts</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Du chef</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">18€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Crème brûlée</h6>
+                            </div>
+                            <div class="txt">
+                                <p>Revisitée</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">22€</span>
+                            </div>
+                        </button>
+                        <button class="shad btn-menu">
+                            <div class="tit-c">
+                                <h6 class="ent-title">Tiramisu</h6>
+                            </div>
+                            <div class="txt">
+                                <p>À la noisette</p>
+                            </div>
+                            <div class="valid-btn">
+                                <span class="price">23€</span>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="commandes">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="btn-princ" id="btn">
+                    <button>
+                        Commander
+                    </button>
                 </div>
             </div>
         </section>
