--- a/index.html
+++ b/index.html
@@ -124,25 +124,28 @@
                     </div>
                     <div class="cards-list" id="cards-list">
                         <div class="one">
-                            <div class="card shad" id="card">
-                                <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image restaurant 1">
-                                <div class="new" id="new">
-                                    <p>Nouveau</p>
-                                </div>
-                                <div class="card-body" id="cardbody">
-                                    <div class="txt" id="txt">
-                                        <h5>La palette du goût</h5>
-                                        <p>Ménilmontant</p>
+                            <a href="palette-du-gout.html">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image restaurant 1">
+                                    <div class="new" id="new">
+                                        <p>Nouveau</p>
                                     </div>
-                                    <div class="favoris favoris-ind" id="favoris">
-                                        <span class="ic" id="ic">
-                                            <i class="fa-regular fa-heart"></i>
-                                        </span>
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>La palette du goût</h5>
+                                            <p>Ménilmontant</p>
+                                        </div>
+                                        <div class="favoris favoris-ind" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="two">
+                           <a href="note-enchantee.html">
                             <div class="card shad" id="card">
                                 <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image restaurant 2">
                                 <div class="new" id="new">
@@ -160,44 +163,49 @@
                                     </div>
                                 </div>
                             </div>
+                           </a>
                         </div>
                         <div class="three">
-                            <div class="card shad" id="card">
-                                <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image restaurant 3">
-                                <div class="new" id="new">
-                                    <p>Nouveau</p>
-                                </div>
-                                <div class="card-body" id="cardbody">
-                                    <div class="txt" id="txt">
-                                        <h5>À la française</h5>
-                                        <p>Cité rouge</p>
+                            <a href="a-la-francaise.html">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image restaurant 3">
+                                    <div class="new" id="new">
+                                        <p>Nouveau</p>
                                     </div>
-                                    <div class="favoris favoris-ind" id="favoris">
-                                        <span class="ic" id="ic">
-                                            <i class="fa-regular fa-heart"></i>
-                                        </span>
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>À la française</h5>
+                                            <p>Cité rouge</p>
+                                        </div>
+                                        <div class="favoris favoris-ind" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="four">
-                            <div class="card shad" id="card">
-                                <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image restaurant 4">
-                                <div class="new" id="new">
-                                    <p>Nouveau</p>
-                                </div>
-                                <div class="card-body" id="cardbody">
-                                    <div class="txt" id="txt">
-                                        <h5>Le délice des sens</h5>
-                                        <p>Folie-Méricourt</p>
+                            <a href="delice-des-sens.html">
+                                <div class="card shad" id="card">
+                                    <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image restaurant 4">
+                                    <div class="new" id="new">
+                                        <p>Nouveau</p>
                                     </div>
-                                    <div class="favoris favoris-ind" id="favoris">
-                                        <span class="ic" id="ic">
-                                            <i class="fa-regular fa-heart"></i>
-                                        </span>
+                                    <div class="card-body" id="cardbody">
+                                        <div class="txt" id="txt">
+                                            <h5>Le délice des sens</h5>
+                                            <p>Folie-Méricourt</p>
+                                        </div>
+                                        <div class="favoris favoris-ind" id="favoris">
+                                            <span class="ic" id="ic">
+                                                <i class="fa-regular fa-heart"></i>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -216,7 +224,7 @@
                         <a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a>
                         <a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
                         <a href="#">Mentions légales</a>
-                        <a href="#">Contact</a>
+                        <a href="mailto:ohmyfood@gmail.com">Contact</a>
                     </div>
                 </div>
             </div>
