Ajout du loader et de son animation

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header" id="header">
-        <div class="container" id="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                 </div>
@@ -31,155 +31,38 @@
                 </div>
             </div>
         </div>
-        </div>
     </header>
     <main class="main">
         <section class="present franc">
+            <h1>À la française</h1>
         </section>
         <section class="menu-restau">
-            <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="colg-lg-12 col-md-12 col-sm-12">
                 <div class="title" id="title">
-                    <h1 class="h-title">À la française</h1>
+                    <h2 class="h-title">À la française</h2>
                     <div class="favoris" id="favoris">
                         <span class="heart" id="heart">
                             <i class="fa-regular fa-heart"></i>
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <div class="entrees">
-                        <h2 class="m-title">Entrées</h2>
-                        <div class="card-rest">
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Tartare de pouple acidulé</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Aux zestes d'orange</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">25€</span>
-                                </div>
-                            </button>
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Velouté de légumes d'antan</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Carotte, panais, topinambour</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">35€</span>
-                                </div>
-                            </button>
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Soupe à l'oignon</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Revisitée</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">20€</span>
-                                    <span class="valid">
-                                        <i class="fa-solid fa-circle-check"></i>
-                                    </span>
-                                </div>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="plats">
-                        <h3 class="m-title">Plats</h3>
-                        <div class="card-rest">
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Coquilles Saint-Jacques</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Accompagnées d'une purée de panais</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">40€</span>
-                                </div>
-                            </button>
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Magret de canard</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Et parmentier de pommes de terre</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">35€</span>
-                                </div>
-                            </button>
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Pigeonneau d'Ille-et-Vilaine</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Sur son lit de gnocchis aux légumes</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">44€</span>
-                                </div>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="desserts">
-                        <h4 class="m-title">Désserts</h4>
-                        <div class="card-rest">
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Pétales de violettes glacés</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Et purée de noisettes</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">18€</span>
-                                </div>
-                            </button>
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Fondant au chocolat</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Revisité</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">22€</span>
-                                </div>
-                            </button>
-                            <button class="shad btn-menu">
-                                <div class="tit-c">
-                                    <h6 class="ent-title">Millefeuille croustillant</h6>
-                                </div>
-                                <div class="txt">
-                                    <p>Myrtille et pâte d'amande</p>
-                                </div>
-                                <div class="valid-btn">
-                                    <span class="price">23€</span>
-                                </div>
-                            </button>
-                        </div>
-                    </div>
-                </div>
             </div>
-        </section>
-        <section class="commandes">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="btn-princ" id="btn">
-                    <button>
-                        Commander
-                    </button>
+                <div class="entrees">
+                    <h3 class="m-title">Entrées</h3>
+                </div>
+                <div class="plats">
+                    <h4 class="m-title">Plats</h4>
+                </div>
+                <div class="desserts">
+                    <h5 class="m-title">Désserts</h5>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="container" id="container">
+        <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="content" id="content">
                     <div class="logo-footer" id="logo-footer">
@@ -195,6 +78,13 @@
             </div>
         </div>
     </footer>
+
+    <div class="loader">
+        <div class="dot dot-1"></div>
+        <div class="dot dot-2"></div>
+        <div class="dot dot-3"></div>
+        <div class="dot dot-4"></div>
+    </div>
 
     <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
