--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header" id="header">
-        <div class="container" id="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="logo" id="logo">
@@ -222,7 +222,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container" id="container">
+        <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="content" id="content">
                     <div class="logo-footer" id="logo-footer">
