--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header" id="header">
-        <div class="container" id="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                 </div>
@@ -31,16 +31,16 @@
                 </div>
             </div>
         </div>
-        </div>
     </header>
 
     <main class="main">
         <section class="present gout">
+            <h1>Palette du gout</h1>
         </section>
         <section class="menu-restau">
-            <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="colg-lg-12 col-md-12 col-sm-12">
                 <div class="title" id="title">
-                    <h1 class="h-title">La palette du goût</h1>
+                    <h2 class="h-title">La palette du goût</h2>
                     <div class="favoris" id="favoris">
                         <span class="heart" id="heart">
                             <i class="fa-regular fa-heart"></i>
@@ -50,119 +50,161 @@
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="entrees">
-                    <h2 class="m-title">Entrées</h2>
+                    <h3 class="m-title">Entrées</h3>
                     <div class="card-rest">
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Fricassée d'escargots</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Au piment d'Espelette</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Fricassée d'escargots</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Au piment d'Espelette
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">25€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Foie gras de canard mi-cuit</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Et ses copeaux de truffe noire</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Foie gras de canard mi-cuit</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et ses copeaux de truffe noire
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">35€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Oeuf au plat</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Assaisonné à la truffe sur lit de...</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Oeuf au plat</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Assaisonée à la truffe sur le lit de...
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">20€</span>
                                 <span class="valid">
                                     <i class="fa-solid fa-circle-check"></i>
                                 </span>
-                            </div>
+                            </span>
                         </button>
                     </div>
                 </div>
                 <div class="plats">
-                    <h3 class="m-title">Plats</h3>
+                    <h4 class="m-title">Plats</h4>
                     <div class="card-rest">
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Filet de boeuf aux herbes</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Accompagné de sa rimbambelle de légumes</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Filet de boeuf aux herbes</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Accompagné de sa ribambelle de légumes
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">40€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Parmentier de queue de boeuf</h6>
-                            </div>
-                            <div class="txt">
-                                <p>À la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Parmentier de queue de boeuf</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Assaisonée à la truffe sur le lit de...
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">35€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Filet de trubot</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Aux agrumes</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Filet de trubot</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Aux argrumes
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">44€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                     </div>
                 </div>
                 <div class="desserts">
-                    <h4 class="m-title">Désserts</h4>
+                    <h5 class="m-title">Désserts</h5>
                     <div class="card-rest">
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Paris-Brest</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Revisité</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Paris-Brest</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Revisité
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">18€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Macaron au chocolat d'exception</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Et glace à la ville de Madagascar</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Macaron au chocolat d'exception</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Et glace à la vanille de Madagascar
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">22€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                         <button class="shad btn-menu">
-                            <div class="tit-c">
-                                <h6 class="ent-title">Mousse au chocolat</h6>
-                            </div>
-                            <div class="txt">
-                                <p>Au piment d'Espelette et à la truffe noire</p>
-                            </div>
-                            <div class="valid-btn">
+                            <span class="tit-c">
+                                <span>Mousse au chocolat</span>
+                            </span>
+                            <span class="txt">
+                                <span class="text">
+                                    Au piment d'Espelette et à la truffe noire
+                                </span>
+                            </span>
+                            <span class="valid-btn">
                                 <span class="price">23€</span>
-                            </div>
+                                <span class="valid">
+                                    <i class="fa-solid fa-circle-check"></i>
+                                </span>
+                            </span>
                         </button>
                     </div>
                 </div>
@@ -171,6 +213,7 @@
         <section class="commandes">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="btn-princ" id="btn">
+                    <h6 class="command-h6">c</h6>
                     <button>
                         Commander
                     </button>
@@ -180,7 +223,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container" id="container">
+        <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="content" id="content">
                     <div class="logo-footer" id="logo-footer">
@@ -196,6 +239,13 @@
             </div>
         </div>
     </footer>
+
+    <div class="loader">
+        <div class="dot dot-1"></div>
+        <div class="dot dot-2"></div>
+        <div class="dot dot-3"></div>
+        <div class="dot dot-4"></div>
+    </div>
 
     <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
