--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header" id="header">
-        <div class="container" id="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                 </div>
@@ -31,17 +31,16 @@
                 </div>
             </div>
         </div>
-        </div>
     </header>
 
     <main class="main">
         <section class="present delice">
-            <div class="present-div"></div>
+            <h1>Délice des sens</h1>
         </section>
         <section class="menu-restau">
-            <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="colg-lg-12 col-md-12 col-sm-12">
                 <div class="title" id="title">
-                    <h1 class="h-title">Le délice des sens</h1>
+                    <h2 class="h-title">Le délice des sens</h2>
                     <div class="favoris" id="favoris">
                         <span class="heart" id="heart">
                             <i class="fa-regular fa-heart"></i>
@@ -51,137 +50,20 @@
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="entrees">
-                    <h2 class="m-title">Entrées</h2>
-                    <div class="card-rest">
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Tartare de thon</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Assaisonné au yuzu</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">25€</span>
-                            </span>
-                        </button>
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Bouchée de homard croustillant</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Et sa farandole de petits légumes</p>
-                            </span>
-                            <div class="valid-btn">
-                                <span class="price">35€</span>
-                            </div>
-                        </button>
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Velouté de cèpes</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Aux truffes</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">20€</span>
-                                <span class="valid">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                </span>
-                            </span>
-                        </button>
-                    </div>
+                    <h3 class="m-title">Entrées</h3>
                 </div>
                 <div class="plats">
-                    <h3 class="m-title">Plats</h3>
-                    <div class="card-rest">
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Poulet rôti aux herbes de Prove...</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Et sa crème de truffe</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">40€</span>
-                            </span>
-                        </button>
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Langouste rôtie</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Et ses légumes de saison</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">35€</span>
-                            </span>
-                        </button>
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Côte de boeuf Angus</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Et sa purée de panais</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">44€</span>
-                            </span>
-                        </button>
-                    </div>
+                    <h4 class="m-title">Plats</h4>
                 </div>
                 <div class="desserts">
-                    <h4 class="m-title">Désserts</h4>
-                    <div class="card-rest">
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Farandole de desserts</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Du chef</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">18€</span>
-                            </span>
-                        </button>
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Crème brûlée</h6>
-                            </span>
-                            <span class="txt">
-                                <p>Revisitée</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">22€</span>
-                            </span>
-                        </button>
-                        <button class="shad btn-menu">
-                            <span class="tit-c">
-                                <h6 class="ent-title">Tiramisu</h6>
-                            </span>
-                            <span class="txt">
-                                <p>À la noisette</p>
-                            </span>
-                            <span class="valid-btn">
-                                <span class="price">23€</span>
-                            </span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="commandes">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <div class="btn-princ" id="btn">
-                    <button>
-                        Commander
-                    </button>
+                    <h5 class="m-title">Désserts</h5>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="container" id="container">
+        <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="content" id="content">
                     <div class="logo-footer" id="logo-footer">
@@ -198,11 +80,13 @@
         </div>
     </footer>
 
-    <div class="loader" id="loader">
-        
+    <div class="loader">
+        <div class="dot dot-1"></div>
+        <div class="dot dot-2"></div>
+        <div class="dot dot-3"></div>
+        <div class="dot dot-4"></div>
     </div>
 
-    <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
+     <script src="https://kit.fontawesome.com/03e24a9fa2.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
